feat: implementación de strategy
Implementación de patrón strategy, con apiReader y excelReader
